# page-loader

./: .gitignore  Makefile  README.md  pyproject.toml  test.py
.github/workflows/: project_ci.yml
page_loader/: __init__.py  args_parser.py  html_parsing.py  loader.py  logger.py  page_loader.py  tools.py
page_loader/scripts/: page_loader_script.py
tests/: test_connection_exceptions.py  test_download  test_download.py  test_generate_file_name.py  test_generate_name.py  test_get_file_name.py  test_normalize.py  test_os_exceptions.py
tests/fixtures/: expected_files_names.txt  expected_images_names.txt  expected_page.html  mock_page_content.txt
tests/fixtures/img_mocks/: expected_images_names.txt
tests/fixtures/link_mocks/: expected_links_names.txt  links.txt  mock_link1_content.html  mock_link3_content.css
tests/fixtures/script_mocks/: expected_scripts_names.txt  mock_script1_content.js  mock_script2_content.js  mock_script3_content.js  scripts.txt
